chandeliers-lus/tests/warn/dead_code/hidden-main.stderr
error: method `step` is never used
 --> tests/warn/dead_code/hidden-main.rs:7:14
  |
7 |         node foo() returns ();
  |              ^^^ method in this implementation
  |
note: the lint level is defined here
 --> tests/warn/dead_code/hidden-main.rs:2:9
  |
2 | #![deny(dead_code)]
  |         ^^^^^^^^^

error: function `main` is never used
 --> tests/warn/dead_code/hidden-main.rs:7:14
  |
7 |         node foo() returns ();
  |              ^^^
